# aibardefi

./: .env.example  .gitignore  404.html  Anchor.toml  CLAUDE.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._tree.txt  hardhat.config.ts  index.html  manifest.json  next.config.ts  package-lock.json  package.json  sb.html  trade.html  trade.txt  tsconfig.json
.github/workflows/: deploy.yml
_not-found/: __next._full.txt  __next._head.txt  __next._not-found.__PAGE__.txt  __next._tree.txt
artifacts/: CollateralVault.json  MockERC20.json  PriceOracle.json  SBToken.json
contracts/: CollateralVault.sol  MockERC20.sol  PriceOracle.sol  SBToken.sol
programs/orderbook/: Cargo.toml
programs/orderbook/src/: errors.rs  lib.rs  state.rs
programs/orderbook/src/instructions/: cancel_order.rs  crank_match.rs  deposit.rs  initialize_market.rs  mod.rs  place_order.rs  settle.rs  withdraw.rs
programs/sb-protocol/: Cargo.toml  Xargo.toml
sb/: __next._full.txt  __next._tree.txt  __next.sb.__PAGE__.txt  borrow.html  borrow.txt  dashboard.html  dashboard.txt  treasury.html  treasury.txt
sb/borrow/: __next._tree.txt  __next.sb.borrow.__PAGE__.txt
sb/dashboard/: __next._tree.txt  __next.sb.dashboard.__PAGE__.txt
sb/position/: 0.html  1.html  1.txt  2.html  2.txt
sb/treasury/: __next._head.txt  __next._tree.txt  __next.sb.treasury.__PAGE__.txt
scripts/: analyze-cashcat.js  analyze-slippy.js  compile.ts  deploy.ts  liquidator.ts  update-prices.ts
src/app/: globals.css  (+2 more)
trade/: __next._index.txt  __next._tree.txt  __next.trade.__PAGE__.txt
(+88 files in other folders)
