[package]
name = "orderbook"
version = "0.1.0"
description = "AlphaDEX on-chain orderbook for perpetual trading on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "orderbook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
